added las updates before working remote

--- a/index.html
+++ b/index.html
@@ -46,7 +46,16 @@
     <a class="hidden" id="nav-logout" href="#"><small>(logout)</small></a>
   </div>
 </nav>
-
+<div class="story-sub hidden" display="flex">
+  <form>
+    <label for="author">author</label>
+    <input type="text" id ="author">
+    <label for="title">title</label>
+    <input type="text" id="title">
+    <label for="url">url</label>
+    <input type="text" id="url">   
+  </form>
+</div>
 <!-- area for stories (all stories, user stories, favorites) -->
 <section class="stories-container container">
 
