--- a/index.html
+++ b/index.html
@@ -55,8 +55,10 @@
     <label for="title">title</label>
     <input type="text" id="title">
     <label for="url">url</label>
-    <input type="text" id="url">  
+    <input type="text" id="url">  <div>
     <button type="submit" id="subBut">Submit Story</button> 
+    <button id="cancel">Cancel</button>
+  </div>
   </form>
 </div>
 <!-- area for stories (all stories, user stories, favorites) -->
